--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-image-appear": "^1.2.23",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
-    "shards-react": "^1.0.3",
-    "react-image-appear": "latest"
+    "shards-react": "^1.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
